goog.provide('ExampleProto');

goog.require('proto.actions.Action');
goog.require('proto.actions.Active');
goog.require('proto.actions.Build');
goog.require('proto.actions.Controls');
goog.require('proto.actions.Unit');
goog.require('proto.addressBook.AddressBook');
goog.require('proto.addressBook.Person');
goog.require('proto.addressBook.Person.PhoneNumber');
goog.require('proto.addressBook.Person.PhoneType');
goog.require('proto.ship.Attach');
goog.require('proto.ship.Beam');
goog.require('proto.ship.EndMarker');
goog.require('proto.ship.Engine');
goog.require('proto.ship.FuelTank');
goog.require('proto.ship.Part');
goog.require('proto.ship.PhysicsState');
goog.require('proto.ship.Root');
goog.require('proto.ship.Ship');
goog.require('proto.ship.Structure');
goog.require('proto.ship.StructureData');
goog.require('proto.ship.StructureLink');
goog.require('proto.ship.StructureNode');
goog.require('proto.ship.StructureTree');
goog.require('proto.ship.Vessel');
goog.require('proto.world.GameUpdate');
goog.require('proto.world.Snapshot');
